feat: add style to columns

--- a/index.html
+++ b/index.html
@@ -10,16 +10,18 @@
         <div class="column">
             <h1>Word Sorter</h1>
             <h2>Instructions</h2>
-            <p>Add words to the input boxes. You will see your words appear inside the results box. You can print or clear the words as necessary.</p>
+            <p>Add words using the insert word box. You will see your words appear inside the results box. You can print or clear the words as necessary.</p>
         </div>
         <div class="column">
-            <input type="text" placeholder="Insert word...">
-            <button type="button">Add Word</button>
+            <input id="word" type="text" placeholder="Insert word...">
+            <br>
+            <button id="addWord" type="button"><strong>Add Word</strong></button>
         </div>
         <div class="column">
             <h2 class="center-text">Results Box</h2>
             <div id="results"></div>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
