feat: center column 2

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <p>Add words using the insert word box. You will see your words appear inside the results box. You can print or clear the words as necessary.</p>
         </div>
         <div class="column">
+            <h2 class="center-text">Add Your Word</h2>
             <input id="word" type="text" placeholder="Insert word...">
             <br>
             <button id="addWord" type="button"><strong>Add Word</strong></button>
